[package]
name = "robotics-simulation-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }

# enable a small amount of optimization in the dev profile
[profile.dev]
opt-level = 1

# enable a large amount of optimization in the dev profile for dependencies
[profile.dev.package."*"]
opt-level = 3
